# algo-trade

./: .gitignore  README.md
strategies/orderbook/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
strategies/orderbook/src/orderbook_strategy/: __init__.py  backtest.py  cli.py  config.py  data_loader.py  distribution.py  events.py  execution.py  indicators.py  metrics.py  report.py  strategy.py  utils.py
strategies/orderbook/tests/: conftest.py  test_distribution.py
strategies/polymarket-copy/: README.md  pyproject.toml
strategies/polymarket-copy/docs/: API_REFERENCE.md
strategies/polymarket-copy/pmirror/: __init__.py  main.py
strategies/polymarket-copy/pmirror/backtest/: __init__.py  engine.py  metrics.py  runner.py
strategies/polymarket-copy/pmirror/config/: __init__.py  settings.py
strategies/polymarket-copy/pmirror/data/: __init__.py  cache.py  client.py  data_api.py  gamma_api.py  storage.py
strategies/polymarket-copy/pmirror/domain/: __init__.py  engine.py  metrics.py  models.py  normalize.py
strategies/polymarket-copy/pmirror/policies/: __init__.py  base.py  fixed_allocation.py  mirror_latency.py  (+1 more)
strategies/polymarket-copy/scripts/: explore_apis.py
strategies/polymarket-copy/tests/: __init__.py  test_backtest.py  test_backtest_metrics.py  test_cache.py  test_charts.py  test_client.py  test_data_api.py  test_engine.py  test_gamma_api.py  test_integration.py  test_main.py  test_metrics.py  test_models.py  test_normalize.py  test_parquet.py  test_policies.py  test_report.py  test_settings.py  test_storage.py
(+285 files in other folders)
