[project]
name = "orderbook-strategy"
version = "0.1.0"
description = "Orderbook L2 trading strategy with distribution-based directional probability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "click>=8.0.0",
]

[project.scripts]
orderbook-backtest = "orderbook_strategy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
